[package]
name = "emne-eksport"
version = "0.1.0"
authors = ["Henrik Hørlück Berg <henrik@horluck.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.16", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openidconnect = "2.2.0"
url = "2.2.2"
log = "0.4.16"
env_logger = "0.9.0"
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"]}
http = "0.2"
tower = { version = "0.4", features = ["make"]}
thiserror = "1.0.30"
chrono = { version = "0.4", features = ["serde"] }
headless_chrome = "0.9.0"
