[package]
name = "emne-eksport"
version = "0.1.0"
authors = ["Henrik Hørlück Berg <henrik@horluck.no>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["env", "std", "color", "help", "usage", "error-context", "suggestions"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.16", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openidconnect = "2.2"
url = "2.2"
log = "0.4"
env_logger = "0.9.0"
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"]}
http = "0.2"
tower = { version = "0.4", features = ["make"]}
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fantoccini = "0.20.0-rc.2"
base64 = "0.13"
# must be equal to fantoccini's
webdriver = "0.46.0"

[patch.crates-io]
fantoccini = { git = "https://github.com/henrikhorluck/fantoccini", branch = "feat/print" }

